@@ -13,43 +13,34 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- 指定 Java 版本为 8 -->
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <build>
     <plugins>
-      <!-- Maven 编译插件 -->
+      <!-- Maven Compiler Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
 
-      <!-- exec-maven-plugin 插件 -->
+      <!-- Maven Surefire Plugin -->
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.6.0</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
         <configuration>
-          <executable>docker</executable>
-          <arguments>
-            <argument>build</argument>
-            <argument>-t</argument>
-            <argument>myproject</argument>
-            <argument>-f</argument>
-            <argument>DockerfileSample</argument>
-            <argument>.</argument>
-          </arguments>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
 
-      <!-- docker-maven-plugin 插件 -->
+      <!-- Docker Integration Plugin -->
       <plugin>
         <groupId>com.spotify</groupId>
         <artifactId>docker-maven-plugin</artifactId>
@@ -67,11 +58,11 @@
         </configuration>
       </plugin>
 
-      <!-- jacoco-maven-plugin 插件 -->
+      <!-- Jacoco for Code Coverage -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.5.5.201112152213</version>
+        <version>0.8.7</version>
         <configuration>
           <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
           <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
@@ -98,36 +89,19 @@
   <repositories>
     <repository>
       <id>aliyun-central</id>
-      <name>Aliyun Maven Central Repository</name>
       <url>https://maven.aliyun.com/repository/central</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
+    </repository>
+    <repository>
+      <id>aliyun-public</id>
+      <url>https://maven.aliyun.com/repository/public</url>
     </repository>
   </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>aliyun-central</id>
-      <name>Aliyun Maven Central Repository</name>
-      <url>https://maven.aliyun.com/repository/central</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </pluginRepository>
-  </pluginRepositories>
 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
